2011-10-17    <h.v.raven@googlemail.com>

	* src/xml.h: new typedef for spell_iterator

	* src/xmlspelllist.cpp (fill_list_, get_spell_list, get_spell, read_spell_) changed to use iterators instead of pointers

2011-10-14    <h.v.raven@googlemail.com>

	* src/xmlspelllist.cpp (Spell_List): changed to use spell_list and spell_name_map

	* src/xmldecoder.cpp (get_names_): new function to get all spell names

2011-10-11    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_school_): new decoding function for schools

	* src/school.cpp (School, remove_subschool): changed arguments to reference
	(print): added descriptor to output
	(print_descriptor): new function

	* src/spell.h (Spell_Element): added descriptor

	* src/xmldecoder.cpp (add_elements_): new main function for xmldecoder
	(add_name_): new decoding function for names
	(add_name_): fixed endless loop...

	* src/xmlspelllist.cpp (~Spell_List): added delete for cached spells
	(get_spell): new function for returning spell
	(read_spell_): new function to call the xml decoder

	* src/spell.cpp (add_element): save fix elements in variables and create pointer entry for special entrys
	(~Spell): changed to not delete fix elements

	* src/xmlspelllist.cpp (get_spell_list): changed map type and get name direct from spell_list_ (instead from xml)

2011-10-10    <h.v.raven@googlemail.com>

	* src/spell.cpp (add_element): new function for adding elements

	* src/xml.cpp (get_spell): change to work with a loop over all elements
	(add_element_, add_name_): new functions to replace

2011-10-09    <h.v.raven@googlemail.com>

	* src/target.cpp (Target): added checks before delete

	* src/error.h (Invalid_Attribute): new error struct

	* src/spell.cpp (~Spell): added delete for target
	* src/spell.cpp (set_target): new function

	* src/gtkwindow.cpp (display_spell): added target to output

	* src/xml.cpp (get_spell): added check and import for target
	* src/xml.cpp (check_spell_target_, get_spell_target): new functions
