@@ -1,24 +1,26 @@
 #include "xml.h"
+#include "error.h"
 
-Spell_RefPtr::Spell_RefPtr( Spell_List const * const plist,
-			    Spell_Tag const * const ptag )
-  : pspell_(),
-    plist_(plist),
-    ptag_(ptag)
+Spell_RefPtr::Spell_RefPtr( Spell_List * const plist,
+			    const unsigned int spell )
+  : plist_(plist),
+    spell_(spell)
 {
+  if ( ! plist_ )
+    throw Invalid_Pointer();
 }
 
-Spell_RefPtr::Spell_RefPtr( Spell_List const * const plist,
-			    const std::string& name )
-  : pspell_( plist->get_spell_element(name) ),
-    plist_(plist),
-    ptag_(0)
+Spell_RefPtr::Spell_RefPtr( Spell_List * const plist,
+			    const std::string& spell )
+  : plist_(plist)
 {
-  const Spell_Tag* ptag = plist->get_tag_pointer_( name );
-  ptag_ = ptag;
+  if ( plist_ )
+    spell_ = plist_->find_spell_ ( spell );
+  else
+    throw Invalid_Pointer();
 }
 
-Spell& Spell_RefPtr::operator*()
+/*Spell& Spell_RefPtr::operator*()
 {
   if ( ptag_->pspell )
     return *(ptag_->pspell);
@@ -38,4 +40,4 @@ Spell* Spell_RefPtr::operator->()
       plist_->loadspell( ptag_ );
       return ptag_->pspell;
     }
-}
+    }*/
